# invin-launcher

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
crates/auth/src/: secret.rs
crates/backend/src/: account.rs  backend.rs  backend_handler.rs  update.rs
crates/bridge/src/: instance.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: icon.rs  lib.rs  processor.rs  ui.rs
crates/prediction/: Cargo.toml
crates/prediction/src/: hardware.rs  lib.rs  prediction.rs
crates/quartz_launcher/: Cargo.toml  build.rs
crates/quartz_launcher/src/: main.rs  panic.rs
crates/schema/src/: forge.rs  instance.rs  version.rs
crates/t/: build.rs  locales.toml
crates/t/src/: lib.rs
docs/: ROADMAP.md
package/flatpak/: com.moulberry.PandoraLauncher.desktop  com.moulberry.PandoraLauncher.metainfo.xml
scripts/: build_linux.sh  build_mac.sh  build_windows.sh  publish_new_repo.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: lib.rs  models.rs  prediction.rs
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  launch.rs  lib.rs  logs.rs  main.rs  models.rs  net.rs  store.rs
src/lib/: api.ts  browser.ts  prediction.test.ts  prediction.ts  types.ts
src/lib/components/: HardwarePanel.svelte  Icon.svelte  Modal.svelte  OnboardingWizard.svelte  PredictionCard.svelte  ProgressToasts.svelte  RatingBadge.svelte  (+1 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+39 files in other folders)
