[package]
name = "invin-launcher"
version = "0.1.0"
description = "invin launcher — a next-generation, hardware-aware Minecraft launcher"
authors = ["invin"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "invin_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
invin-core = { path = "core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
sha1 = "0.10"
hex = "0.4"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
strip = true
lto = true
opt-level = "s"
